--- a/workflows/Github_Pull_Request_Review_Events_to_Slack/workflow.spec.yaml
+++ b/workflows/Github_Pull_Request_Review_Events_to_Slack/workflow.spec.yaml
@@ -1,8 +1,10 @@
 extension: workflow
 products: ["insightconnect"]
-name: Office_365_Analysis
-title: "Office 365 Analysis"
-description: "This workflow is designed to automatically analyze incoming emails to determine if they are malicious. This workflow assumes a user is using their report phishing button to send an email to an administrative account with the suspicious email attached. The workflow will then analyze any URLs or files in the attached email to find malicious links. If any malicious indicators are found the email will be remediated across the organization."
+name: Github_pull_request_review_events_to_slack
+title: Github_pull_request_review_events_to_slack
+description: "This workflow is designed to automatically analyze incoming emails to determine if they are malicious. This workflow assumes a user is using their report 
+              phishing button to send an email to an administrative account with the suspicious email attached. The workflow will then analyze any URLs or files in the attached email 
+              to find malicious links. If any malicious indicators are found the email will be remediated across the organization."
 version: 1.0.0
 vendor: rapid7
 support: rapid7
