--- a/workflows/Github_Pull_Request_Review_Events_to_Slack/workflow.spec.yaml
+++ b/workflows/Github_Pull_Request_Review_Events_to_Slack/workflow.spec.yaml
@@ -2,17 +2,17 @@ extension: workflow
 products: ["insightconnect"]
 name: Github_pull_request_review_events_to_slack
 title: Github_pull_request_review_events_to_slack
-description: "This workflow is designed to automatically analyze incoming emails to determine if they are malicious. This workflow assumes a user is using their report 
-              phishing button to send an email to an administrative account with the suspicious email attached. The workflow will then analyze any URLs or files in the attached email 
-              to find malicious links. If any malicious indicators are found the email will be remediated across the organization."
+description: This workflow is designed to notify Github Pull Request Review Events to Slack.  Post messages directly into your Slack workspace in your preferred channels, private groups, or IM channels.
+             When this event occurs, Github will POST a body of information about the Pull Request Review to InsightConnect which will use that information to kick off the workflow and post a message in a Slack channel that a pull
+             request review happened. This workflow allows the team to be easily notified when code is ready for review.
 version: 1.0.0
 vendor: rapid7
 support: rapid7
 status: []
 hub_tags:
-  use_cases: [threat_detection_and_response]
-  keywords: [phishing, email, office365]
-  features: []
+use_cases: [Pull request review Github_pull_request_review_events_to_slack]
+keywords: []
+features: []
 resources:
-  source_url: https://github.com/rapid7/insightconnect-workflows/tree/master/workflows/Github_Pull_Request_Review_Events_to_Slack
-  license_url: https://github.com/rapid7/insightconnect-workflows/blob/master/LICENSE
+source_url: https://github.com/rapid7/insightconnect-workflows/tree/master/workflows/Github_Pull_Request_Review_Events_to_Slack
+license_url: https://github.com/rapid7/insightconnect-workflows/blob/master/LICENSE
