--- a/workflows/Lookup_Vuln_From_Slack/workflow.spec.yaml
+++ b/workflows/Lookup_Vuln_From_Slack/workflow.spec.yaml
@@ -15,7 +15,7 @@ resources:
   source_url: https://github.com/rapid7/insightconnect-workflows/tree/master/workflows/lookup_vuln_from_slack
   license_url: https://github.com/rapid7/insightconnect-workflows/blob/master/LICENSE
   screenshots:
-  - name: workflow1.png
+  - name: workflow.png
     title: Workflow View
   - name: job1.png
     title: Successful Workflow Job
