--- a/workflows/InsightVM_Top_25_Remediations_to_JIRA/workflow.spec.yaml
+++ b/workflows/InsightVM_Top_25_Remediations_to_JIRA/workflow.spec.yaml
@@ -1,18 +1,18 @@
 extension: workflow
 products: ["insightconnect"]
-name: IVM_Top_Remediations_to_JIRA 
-title: "IVM Top Remediations to JIRA"
+name: InsightVM_Top_25_Remediations_to_JIRA 
+title: "InsightVM Top 25 Remediations to JIRA"
 description: This workflow identifies the current top remediations from InsightVM, determines if issues have been created in JIRA for the identified remediations, and creates or updates issues for the identified remediations as appropriate.
 version: 1.0.0
 vendor: rapid7
 support: rapid7
 status: []
 hub_tags:
-  use_cases: [vulnerability_management, insightvm, jira]
+  use_cases: [vulnerability_management]
   keywords: [vulnerability_management, insightvm, jira]
   features: []
 resources:
-  source_url: https://github.com/rapid7/insightconnect-workflows/tree/master/workflows/IVM_Top_Remediations_to_JIRA
+  source_url: https://github.com/rapid7/insightconnect-workflows/tree/master/workflows/InsightVM_Top_Remediations_to_JIRA
   license_url: https://github.com/rapid7/insightconnect-workflows/blob/master/LICENSE
   screenshots:
   - name: workflow1.png
