--- a/workflows/Suspicious_User_Login_with_IDR_and_Slack_Chatops/workflow.spec.yaml
+++ b/workflows/Suspicious_User_Login_with_IDR_and_Slack_Chatops/workflow.spec.yaml
@@ -8,8 +8,8 @@ vendor: rapid7
 support: rapid7
 status: []
 hub_tags:
-  use_cases: [remediation_management, vulnerability_management]
-  keywords: [remediation_management, vulnerability_management, chat, chatops]
+  use_cases: [threat_detection_and_response]
+  keywords: [insightidr, enrichment, slack, chat, chatops]
   features: []
 resources:
   source_url: https://github.com/rapid7/insightconnect-workflows/tree/master/workflows/Suspicious_User_Login_with_IDR_and_Slack_Chatops
