--- a/workflows/Delete_Exchange_Emails_With_Slack/workflow.spec.yaml
+++ b/workflows/Delete_Exchange_Emails_With_Slack/workflow.spec.yaml
@@ -1,7 +1,7 @@
 extension: workflow
 products: ["insightconnect"]
-name: Delete_O365_Emails_With_Slack
-title: "Delete O365 Emails With Slack"
+name: Delete_Exchange_Emails_With_Slack
+title: "Delete Exchange Emails With Slack"
 description: "This workflow will delete emails matching given search criteria by sending a notification to InisghtConnect with Slack."
 version: 1.0.0
 vendor: rapid7
@@ -9,17 +9,17 @@ support: rapid7
 status: []
 hub_tags:
   use_cases: [threat_detection_and_response]
-  keywords: [phishing, email, office365, slack]
+  keywords: [phishing, email, exchange, slack]
   features: []
 resources:
-  source_url: https://github.com/rapid7/insightconnect-workflows/tree/master/workflows/Delete_O365_Emails_With_Slack
+  source_url: https://github.com/rapid7/insightconnect-workflows/tree/master/workflows/Delete_Exchange_Emails_With_Slack
   license_url: https://github.com/rapid7/insightconnect-workflows/blob/master/LICENSE
   screenshots:
-  - name: screenshot1.png
+  - name: workflow1.png
     title: Workflow 1
-  - name: screenshot2.png
+  - name: workflow2.png
     title: Workflow 2
-  - name: screenshot3.png
+  - name: workflow3.png
     title: Workflow 3
   - name: slack_flow_1.png
     title: Slack Message Flow
