--- a/workflows/Blacklist_Malicious_Hashes_with_VirusTotal_and_Carbon_Black_Response/workflow.spec.yaml
+++ b/workflows/Blacklist_Malicious_Hashes_with_VirusTotal_and_Carbon_Black_Response/workflow.spec.yaml
@@ -2,7 +2,7 @@ extension: workflow
 products: ["insightconnect"]
 name: Blacklist_Malicious_Hashes_with_VirusTotal_and_Carbon_Black_Response
 title: "Blacklist Malicious Hashes with VirusTotal and Carbon Black Response"
-description: "This workflow automated the process of looking up an associated file hash in VirusTotal from an InsightIDR alert."
+description: "This workflow automates the process of looking up an associated file hash in VirusTotal from an InsightIDR alert."
 version: 1.0.0
 vendor: rapid7
 support: rapid7
