--- a/workflows/Block_Sender_In_Office_365_With_Teams/workflow.spec.yaml
+++ b/workflows/Block_Sender_In_Office_365_With_Teams/workflow.spec.yaml
@@ -1,8 +1,8 @@
 extension: workflow
 products: ["insightconnect"]
-name: Block_Sender_With_Teams
-title: "Block Sender With Teams"
-description: "This workflow will block a specified email address or domain using a command sent from Microsoft Teams."
+name: Block_Sender_In_Office_365_With_Teams
+title: "Block Sender In Office 365 With Teams"
+description: "This workflow will block a sender in Office 365 using a command sent from Microsoft Teams."
 version: 1.0.0
 vendor: rapid7
 support: rapid7
@@ -12,7 +12,7 @@ hub_tags:
   keywords: [phishing, email, office365, teams]
   features: []
 resources:
-  source_url: https://github.com/rapid7/insightconnect-workflows/tree/master/workflows/Block_Sender_With_Teams
+  source_url: https://github.com/rapid7/insightconnect-workflows/tree/master/workflows/Block_Sender_In_Office_365_With_Teams
   license_url: https://github.com/rapid7/insightconnect-workflows/blob/master/LICENSE
   screenshots:
   - name: workflow1.png
