--- a/workflows/Purge_Office_365_Emails_with_Slack/workflow.spec.yaml
+++ b/workflows/Purge_Office_365_Emails_with_Slack/workflow.spec.yaml
@@ -2,7 +2,7 @@ extension: workflow
 products: ["insightconnect"]
 name: Purge_Office_365_Emails_with_Slack
 title: "Purge Office 365 Emails with Slack"
-description: "This workflow will purge all emails in an organization matching given search criteria by sending a notification to InisghtConnect with Slack. The workflow will look for any emails that match the body, subject, or from contents given. \n\nIt can either automatically delete these emails or prompt the user for further action."
+description: "This workflow will purge all emails in an organization matching given search criteria by sending a notification to InisghtConnect with Slack."
 version: 1.0.0
 vendor: rapid7
 support: rapid7
