--- a/workflows/Open_Source_Indicator_Enrichment_With_Slack/workflow.spec.yaml
+++ b/workflows/Open_Source_Indicator_Enrichment_With_Slack/workflow.spec.yaml
@@ -15,7 +15,11 @@ resources:
   source_url: https://github.com/rapid7/insightconnect-workflows/tree/master/workflows/Open_Source_Indicator_Enrichment_With_Slack
   license_url: https://github.com/rapid7/insightconnect-workflows/blob/master/LICENSE
   screenshots:
-  - name: Automated_Indicator_Enrichment_Job.png
-    title: Example Job Output
-  - name: Automated_Indicator_Enrichment_Snapshot.png
+  - name: Artifact_URL.png
+    title: Example Artifact for an URL Enrichment
+  - name: Artifact_IP.png
+    title: Example Artifact for an IP Enrichment
+  - name: Artifact_Hash.png
+    title: Example Artifact for a Hash Enrichment
+  - name: Workflow.png
     title: Workflow View
