--- a/workflows/Suspend_User_in_Azure_AD_from_Slack/workflow.spec.yaml
+++ b/workflows/Suspend_User_in_Azure_AD_from_Slack/workflow.spec.yaml
@@ -9,7 +9,7 @@ support: rapid7
 status: []
 hub_tags:
   use_cases: [threat_detection_and_response, cloud_security, user_management]
-  keywords: [threat_detection_and_response, chat, azure, slack]
+  keywords: [chat, azure, slack]
   features: []
 resources:
   source_url: https://github.com/rapid7/insightconnect-workflows/tree/master/workflows/Suspend_User_in_Azure_AD_from_Slack
