--- a/workflows/Purge_Office_365_Emails_with_Teams/workflow.spec.yaml
+++ b/workflows/Purge_Office_365_Emails_with_Teams/workflow.spec.yaml
@@ -1,7 +1,7 @@
 extension: workflow
 products: ["insightconnect"]
 name: Purge_Office_365_Emails_with_Teams
-title: "Purge Office 365 Emails with Teams"
+title: "Purge Office 365 Emails with Microsoft Teams"
 description: "This workflow will delete all emails matching given search criteria from an organization using a command issued from Microsoft Teams."
 version: 1.0.0
 vendor: rapid7
