--- a/workflows/Delete_O365_Emails_With_Slack/workflow.spec.yaml
+++ b/workflows/Delete_O365_Emails_With_Slack/workflow.spec.yaml
@@ -1,9 +1,9 @@
 extension: workflow
 products: ["insightconnect"]
 name: Delete_O365_Emails_With_Slack
-title: "Delete O365 Emails With Slack"
+title: "Delete O365 Emails with Slack"
 description: "This workflow will delete emails matching given search criteria by sending a notification to InisghtConnect with Slack."
-version: 1.0.2
+version: 1.0.3
 vendor: rapid7
 support: rapid7
 status: []
