--- a/workflows/GeoIP_Lookup_with_Slack/workflow.spec.yaml
+++ b/workflows/GeoIP_Lookup_with_Slack/workflow.spec.yaml
@@ -9,7 +9,7 @@ support: rapid7
 status: []
 hub_tags:
   use_cases: [data_enrichment, threat_detection_and_response]
-  keywords: [data_enrichment, threat_detection_and_response, chat, chatops]
+  keywords: [geoip, location, chat, chatops]
   features: []
 resources:
   source_url: https://github.com/rapid7/insightconnect-workflows/tree/master/workflows/GeoIP_Lookup_with_Slack
