--- a/workflows/Delete_O365_Emails_With_Slack/workflow.spec.yaml
+++ b/workflows/Delete_O365_Emails_With_Slack/workflow.spec.yaml
@@ -15,12 +15,10 @@ resources:
   source_url: https://github.com/rapid7/insightconnect-workflows/tree/master/workflows/Delete_O365_Emails_With_Slack
   license_url: https://github.com/rapid7/insightconnect-workflows/blob/master/LICENSE
   screenshots:
-  - name: screenshot1.png
+  - name: workflow1.png
     title: Workflow 1
-  - name: screenshot2.png
+  - name: workflow2.png
     title: Workflow 2
-  - name: screenshot3.png
-    title: Workflow 3
   - name: slack_flow_1.png
     title: Slack Message Flow
   - name: artifacts1.png
