--- a/workflows/Delete_O365_Emails_With_Slack/workflow.spec.yaml
+++ b/workflows/Delete_O365_Emails_With_Slack/workflow.spec.yaml
@@ -1,7 +1,7 @@
 extension: workflow
 products: ["insightconnect"]
 name: Delete_O365_Emails_With_Slack
-title: "Delete O365 Emails with Slack"
+title: "Delete Office 365 Emails with Slack"
 description: "This workflow will delete emails matching given search criteria by sending a notification to InisghtConnect with Slack."
 version: 1.0.4
 vendor: rapid7
