--- a/workflows/Delete_O365_Emails_With_Slack/workflow.spec.yaml
+++ b/workflows/Delete_O365_Emails_With_Slack/workflow.spec.yaml
@@ -16,9 +16,9 @@ resources:
   license_url: https://github.com/rapid7/insightconnect-workflows/blob/master/LICENSE
   screenshots:
   - name: workflow1.png
-    title: Workflow 1
+    title: Workflow Part 1
   - name: workflow2.png
-    title: Workflow 2
+    title: Workflow Part 2
   - name: slack_flow_1.png
     title: Slack Message Flow
   - name: artifacts1.png
