--- a/workflows/Suspend_AD_LDAP_User_from_Slack/workflow.spec.yaml
+++ b/workflows/Suspend_AD_LDAP_User_from_Slack/workflow.spec.yaml
@@ -9,7 +9,7 @@ support: rapid7
 status: []
 hub_tags:
   use_cases: [threat_detection_and_response, cloud_security, user_management]
-  keywords: [chat, active_directory, ldap, slack]
+  keywords: [chat, active_directory, ldap, slack, work_from_home, phishing, covid]
   features: []
 resources:
   source_url: https://github.com/rapid7/insightconnect-workflows/tree/master/workflows/Suspend_AD_LDAP_User_from_Slack
