--- a/workflows/URLScan_with_Slack/workflow.spec.yaml
+++ b/workflows/URLScan_with_Slack/workflow.spec.yaml
@@ -9,7 +9,7 @@ support: rapid7
 status: []
 hub_tags:
   use_cases: [threat_detection_and_response]
-  keywords: [threat_detection_and_response, chat, chatops, phishing, work_from_home, slack, covid]
+  keywords: [chat, chatops, slack, phishing, work_from_home, covid]
   features: []
 resources:
   source_url: https://github.com/rapid7/insightconnect-workflows/tree/master/workflows/URLScan_with_Slack
