--- a/workflows/Open_Source_Indicator_Enrichment_with_Slack/workflow.spec.yaml
+++ b/workflows/Open_Source_Indicator_Enrichment_with_Slack/workflow.spec.yaml
@@ -1,15 +1,15 @@
 extension: workflow
 products: ["insightconnect"]
 name: Open_Source_Indicator_Enrichment_with_Slack
-title: "Open Source Indicator Enrichment with Slack"
-description: "Look up and enrich URLs, IP addresses, and hashes directly from Slack using open source threat intelligence tools such as Dig DNS and Whois."
-version: 1.0.1
+title: "OSINT Indicator Enrichment from Slack"
+description: "Use open source intelligence (OSINT) to look up and enrich URLs, IP addresses, and hashes directly from Slack."
+version: 1.0.2
 vendor: rapid7
 support: rapid7
 status: []
 hub_tags:
-  use_cases: [alerting_and_notifications, threat_detection_and_response]
-  keywords: [enrichment, slack, url, ip, hash]
+  use_cases: [threat_detection_and_response, data_enrichment]
+  keywords: [enrichment, slack, url, ip, hash, ioc, chat, wfh]
   features: []
 resources:
   source_url: https://github.com/rapid7/insightconnect-workflows/tree/master/workflows/Open_Source_Indicator_Enrichment_With_Slack
