--- a/workflows/Open_Source_Indicator_Enrichment_with_Slack/workflow.spec.yaml
+++ b/workflows/Open_Source_Indicator_Enrichment_with_Slack/workflow.spec.yaml
@@ -9,7 +9,7 @@ support: rapid7
 status: []
 hub_tags:
   use_cases: [threat_detection_and_response, data_enrichment]
-  keywords: [enrichment, slack, url, ip, hash, ioc, chat, wfh]
+  keywords: [enrichment, slack, url, ip, hash, ioc, chat, work_from_home, phishing, covid]
   features: []
 resources:
   source_url: https://github.com/rapid7/insightconnect-workflows/tree/master/workflows/Open_Source_Indicator_Enrichment_With_Slack
