--- a/workflows/Open_Source_Indicator_Enrichment_with_Teams/workflow.spec.yaml
+++ b/workflows/Open_Source_Indicator_Enrichment_with_Teams/workflow.spec.yaml
@@ -9,7 +9,7 @@ support: rapid7
 status: []
 hub_tags:
   use_cases: [alerting_and_notifications, threat_detection_and_response]
-  keywords: [enrichment, teams, url, ip, hash]
+  keywords: [enrichment, teams, work_from_home, phishing]
   features: []
 resources:
   source_url: https://github.com/rapid7/insightconnect-workflows/tree/master/workflows/Open_Source_Indicator_Enrichment_With_Teams
