--- a/workflows/Force_Password_Reset_in_Active_Directory_with_Teams/workflow.spec.yaml
+++ b/workflows/Force_Password_Reset_in_Active_Directory_with_Teams/workflow.spec.yaml
@@ -9,7 +9,7 @@ support: rapid7
 status: []
 hub_tags:
   use_cases: [threat_detection_and_response, remediation_management]
-  keywords: [active directory, teams, containment]
+  keywords: [active directory, teams, containment, work_from_home, phishing]
   features: []
 resources:
   source_url: https://github.com/rapid7/insightconnect-workflows/tree/master/workflows/Force_Password_Reset_in_Active_Directory_with_Teams
