--- a/workflows/Unshorten_URL_with_Slack/workflow.spec.yaml
+++ b/workflows/Unshorten_URL_with_Slack/workflow.spec.yaml
@@ -3,16 +3,16 @@ products: ["insightconnect"]
 name: Unshorten_URL_with_Slack
 title: "Unshorten URL with Slack"
 description: This workflow accepts a Slack command, looks up the URL in the unshorten.me service and reports back the unshortened URL.
-version: 1.0.1
+version: 1.0.2
 vendor: rapid7
 support: rapid7
 status: []
 hub_tags:
   use_cases: [data_enrichment, threat_detection_and_response]
-  keywords: [data_enrichment, threat_detection_and_response, chat, chatops]
+  keywords: [data_enrichment, threat_detection_and_response, chat, chatops, work_from_home, phishing]
   features: []
 resources:
-  source_url: https://github.com/rapid7/insightconnect-workflows/tree/master/workflows/Unshorten_URL_From_Slack
+  source_url: https://github.com/rapid7/insightconnect-workflows/tree/master/workflows/Unshorten_URL_with_Slack
   license_url: https://github.com/rapid7/insightconnect-workflows/blob/master/LICENSE
   screenshots:
   - name: job.png
