--- a/workflows/Suspend_User_in_Azure_AD_from_Microsoft_Teams/workflow.spec.yaml
+++ b/workflows/Suspend_User_in_Azure_AD_from_Microsoft_Teams/workflow.spec.yaml
@@ -1,15 +1,15 @@
 extension: workflow
 products: ["insightconnect"]
 name: Suspend_User_in_Azure_AD_from_Microsoft_Teams
-title: "Suspend User in Azure AD from Microsoft Teams"
-description: Suspend Azure AD users from Microsoft Teams.
-version: 1.0.0
+title: "Disable User in Azure AD from Microsoft Teams"
+description: Disable Azure AD users from Microsoft Teams.
+version: 1.0.1
 vendor: rapid7
 support: rapid7
 status: []
 hub_tags:
   use_cases: [threat_detection_and_response, cloud_security, user_management]
-  keywords: [chat, azure, slack, work_from_home]
+  keywords: [chat, azure, slack, work_from_home, phishing]
   features: []
 resources:
   source_url: https://github.com/rapid7/insightconnect-workflows/tree/master/workflows/Suspend_User_in_Azure_AD_from_Microsoft_Teams
