--- a/workflows/Force_Password_Reset_in_Azure_AD_from_Microsoft_Teams/workflow.spec.yaml
+++ b/workflows/Force_Password_Reset_in_Azure_AD_from_Microsoft_Teams/workflow.spec.yaml
@@ -9,7 +9,7 @@ support: rapid7
 status: []
 hub_tags:
   use_cases: [threat_detection_and_response, cloud_security, credential_management, user_management]
-  keywords: [threat_detection_and_response, chat, password, azure, microsoft_teams]
+  keywords: [threat_detection_and_response, chat, password, azure, microsoft_teams, work_from_home, phishing]
   features: []
 resources:
   source_url: https://github.com/rapid7/insightconnect-workflows/tree/master/workflows/Force_Password_Reset_in_Azure_AD_from_Microsoft_Teams
