--- a/workflows/Delete_Emails_from_O365_With_Microsoft_Teams/workflow.spec.yaml
+++ b/workflows/Delete_Emails_from_O365_With_Microsoft_Teams/workflow.spec.yaml
@@ -1,15 +1,15 @@
 extension: workflow
 products: ["insightconnect"]
 name: Delete_Emails_from_O365_With_Microsoft_Teams
-title: "Delete Emails from O365 with Microsoft Teams"
-description: "This workflow will delete emails matching given search criteria by sending a notification to InsightConnect with Microsoft Teams."
-version: 1.0.0
+title: "Delete Emails in Office365 from Microsoft Teams"
+description: "Delete emails matching a given search criteria from Microsoft Teams."
+version: 1.0.1
 vendor: rapid7
 support: rapid7
 status: []
 hub_tags:
   use_cases: [threat_detection_and_response]
-  keywords: [phishing, email, exchange, teams, microsoft]
+  keywords: [phishing, email, exchange, teams, microsoft, work_from_home, microsoft_teams, office365, phishing]
   features: []
 resources:
   source_url: https://github.com/rapid7/insightconnect-workflows/tree/master/workflows/Delete_Emails_from_O365_With_Microsoft_Teams
