--- a/workflows/Block_Sender_in_Office_365_with_Teams/workflow.spec.yaml
+++ b/workflows/Block_Sender_in_Office_365_with_Teams/workflow.spec.yaml
@@ -1,15 +1,15 @@
 extension: workflow
 products: ["insightconnect"]
 name: Block_Sender_in_Office_365_with_Teams
-title: "Block Sender in Office 365 with Teams"
-description: "This workflow will block a sender in Office 365 using a command sent from Microsoft Teams."
-version: 1.0.0
+title: "Block Sender in Office365 from Microsoft Teams"
+description: "This workflow blocks a sender or domain in Office365 using a command sent from Microsoft Teams."
+version: 1.0.1
 vendor: rapid7
 support: rapid7
 status: []
 hub_tags:
   use_cases: [threat_detection_and_response]
-  keywords: [phishing, email, office365, teams]
+  keywords: [phishing, email, office365, teams, microsoft, microsoft_teams, work_from_home]
   features: []
 resources:
   source_url: https://github.com/rapid7/insightconnect-workflows/tree/master/workflows/Block_Sender_in_Office_365_with_Teams
