--- a/workflows/Purge_Office_365_Emails_with_Microsoft_Teams/workflow.spec.yaml
+++ b/workflows/Purge_Office_365_Emails_with_Microsoft_Teams/workflow.spec.yaml
@@ -1,15 +1,15 @@
 extension: workflow
 products: ["insightconnect"]
 name: Purge_Office_365_Emails_with_Microsoft_Teams
-title: "Purge Office 365 Emails with Microsoft Teams"
-description: "This workflow will delete all emails matching given search criteria from an organization using a command issued from Microsoft Teams."
-version: 1.0.1
+title: "Purge Emails in Office365 from Microsoft Teams"
+description: "This workflow will delete all emails in an Office365 tennant matching given search criteria from an organization using a command issued from Microsoft Teams."
+version: 1.0.2
 vendor: rapid7
 support: rapid7
 status: []
 hub_tags:
   use_cases: [threat_detection_and_response]
-  keywords: [phishing, email, office365, teams, microsoft]
+  keywords: [phishing, email, office365, teams, microsoft, microsoft_teams, work_from_home]
   features: []
 resources:
   source_url: https://github.com/rapid7/insightconnect-workflows/tree/master/workflows/Purge_Office_365_Emails_with_Microsoft_Teams
