--- a/workflows/Delete_Emails_from_O365_With_Microsoft_Teams/workflow.spec.yaml
+++ b/workflows/Delete_Emails_from_O365_With_Microsoft_Teams/workflow.spec.yaml
@@ -1,7 +1,7 @@
 extension: workflow
 products: ["insightconnect"]
 name: Delete_Emails_from_O365_With_Microsoft_Teams
-title: "Delete Emails in Office365 from Microsoft Teams"
+title: "Delete Emails in Office365 with Microsoft Teams"
 description: "Delete emails matching a given search criteria from Microsoft Teams."
 version: 1.0.1
 vendor: rapid7
