--- a/workflows/Open_Source_Indicator_Enrichment_with_Slack/workflow.spec.yaml
+++ b/workflows/Open_Source_Indicator_Enrichment_with_Slack/workflow.spec.yaml
@@ -1,7 +1,7 @@
 extension: workflow
 products: ["insightconnect"]
 name: Open_Source_Indicator_Enrichment_with_Slack
-title: "OSINT Indicator Enrichment from Slack"
+title: "OSINT Indicator Enrichment with Slack"
 description: "Use open source intelligence (OSINT) to look up and enrich URLs, IP addresses, and hashes directly from Slack."
 version: 1.0.2
 vendor: rapid7
