--- a/workflows/Slack_Chatbot_Hash_Analysis_with_VirusTotal/workflow.spec.yaml
+++ b/workflows/Slack_Chatbot_Hash_Analysis_with_VirusTotal/workflow.spec.yaml
@@ -1,15 +1,15 @@
 extension: workflow
 products: ["insightconnect"]
 name: Slack_Chatbot_Hash_Analysis_with_VirusTotal
-title: "Slack Chatbot Hash Analysis with VirusTotal"
+title: "Enrich File Hash with Slack"
 description: Initiate and receive VirusTotal hash scan reports with the Slack chatbot.
-version: 1.0.2
+version: 1.0.3
 vendor: rapid7
 support: rapid7
 status: []
 hub_tags:
   use_cases: [threat_detection_and_response]
-  keywords: [threat_detection_and_response, chat, antivirus, data_enrichment]
+  keywords: [threat_detection_and_response, chat, antivirus, data_enrichment, phishing, work_from_home, hash, ioc]
   features: []
 resources:
   source_url: https://github.com/rapid7/insightconnect-workflows/tree/master/workflows/Slack_Chatbot_VirusTotal_Hash_Scan
