--- a/workflows/Force_Password_Reset_in_Active_Directory_With_Slack/workflow.spec.yaml
+++ b/workflows/Force_Password_Reset_in_Active_Directory_With_Slack/workflow.spec.yaml
@@ -1,15 +1,15 @@
 extension: workflow
 products: ["insightconnect"]
 name: Force_Password_Reset_in_Active_Directory_With_Slack
-title: "Force Password Reset in Active Directory With Slack"
-description: "Force an Active Directory user password reset from Slack."
-version: 1.0.0
+title: "Force Password Reset in Active Directory with Slack"
+description: "Force an Active Directory user password reset with a command in Slack."
+version: 1.0.1
 vendor: rapid7
 support: rapid7
 status: []
 hub_tags:
-  use_cases: [threat_detection_and_response, remediation_management]
-  keywords: [active directory, slack, containment]
+  use_cases: [threat_detection_and_response, user_management]
+  keywords: [active_directory, slack, containment, chat, work_from_home, phishing]
   features: []
 resources:
   source_url: https://github.com/rapid7/insightconnect-workflows/tree/master/workflows/Force_Password_Reset_in_Active_Directory_With_Slack
