--- a/workflows/Force_Password_Reset_in_Azure_AD_from_Slack/workflow.spec.yaml
+++ b/workflows/Force_Password_Reset_in_Azure_AD_from_Slack/workflow.spec.yaml
@@ -1,15 +1,15 @@
 extension: workflow
 products: ["insightconnect"]
 name: Force_Password_Reset_in_Azure_AD_from_Slack
-title: "Force Password Reset in Azure AD from Slack"
-description: Initiate Azure AD password resets from Slack.
-version: 1.0.0
+title: "Force Password Reset in Azure AD with Slack"
+description: Reset a user's Azure AD password with a simple command in Slack.
+version: 1.0.1
 vendor: rapid7
 support: rapid7
 status: []
 hub_tags:
   use_cases: [threat_detection_and_response, cloud_security, credential_management, user_management]
-  keywords: [threat_detection_and_response, chat, password, azure, slack]
+  keywords: [threat_detection_and_response, chat, password, azure, slack, working_from_home, phishing]
   features: []
 resources:
   source_url: https://github.com/rapid7/insightconnect-workflows/tree/master/workflows/Force_Password_Reset_in_Azure_AD_from_Slack
