--- a/workflows/Unshorten_URL_with_Microsoft_Teams/workflow.spec.yaml
+++ b/workflows/Unshorten_URL_with_Microsoft_Teams/workflow.spec.yaml
@@ -9,7 +9,7 @@ support: rapid7
 status: []
 hub_tags:
   use_cases: [data_enrichment, threat_detection_and_response]
-  keywords: [data_enrichment, threat_detection_and_response, chat, chatops, phishing, work_from_home]
+  keywords: [chat, chatops, phishing, work_from_home]
   features: []
 resources:
   source_url: https://github.com/rapid7/insightconnect-workflows/tree/master/workflows/Unshorten_URL_with_Micorsoft_Teams
