--- a/workflows/Enrich_File_Hash_with_Microsoft_Teams/workflow.spec.yaml
+++ b/workflows/Enrich_File_Hash_with_Microsoft_Teams/workflow.spec.yaml
@@ -9,7 +9,7 @@ support: rapid7
 status: []
 hub_tags:
   use_cases: [threat_detection_and_response]
-  keywords: [threat_detection_and_response, chat, antivirus, data_enrichment, phishing, work_from_home]
+  keywords: [chat, antivirus, data_enrichment, phishing, work_from_home]
   features: []
 resources:
   source_url: https://github.com/rapid7/insightconnect-workflows/tree/master/workflows/Enrich_File_Hash_with_Microsoft_Teams
