--- a/workflows/Microsoft_Teams_URL_Analysis/workflow.spec.yaml
+++ b/workflows/Microsoft_Teams_URL_Analysis/workflow.spec.yaml
@@ -1,9 +1,9 @@
 extension: workflow
 products: ["insightconnect"]
 name: Microsoft_Teams_URL_Analysis
-title: "Microsoft Teams URL Analysis"
+title: "Microsoft Teams URL Enrichment"
 description: This workflow will scan a Microsoft Teams channel for a specific message. When the workflow detects a message matching that signature, it will automatically scan the URL in VirusTotal and return the results to Microsoft Teams
-version: 1.0.0
+version: 1.0.1
 vendor: rapid7
 support: rapid7
 status: []
