--- a/workflows/Office_365_Analysis_with_Palo_Alto_Wildfire/workflow.spec.yaml
+++ b/workflows/Office_365_Analysis_with_Palo_Alto_Wildfire/workflow.spec.yaml
@@ -1,9 +1,9 @@
 extension: workflow
 products: ["insightconnect"]
 name: Office_365_Analysis_with_Palo_Alto_Wildfire
-title: "Office 365 Analysis with Palo Alto Wildfire"
+title: "Office 365 Enrichment with Palo Alto Wildfire"
 description: "This workflow is designed to automatically analyze incoming emails to determine if they are malicious. This workflow assumes a user is using their report phishing button to send an email to an administrative account with the suspicious email attached. The workflow will then analyze any URLs or files in the attached email to find malicious links. If any malicious indicators are found the email will be remediated across the organization."
-version: 1.0.0
+version: 1.0.1
 vendor: rapid7
 support: rapid7
 status: []
