--- a/workflows/Slack_Chatbot_URL_Analysis_with_VirusTotal/workflow.spec.yaml
+++ b/workflows/Slack_Chatbot_URL_Analysis_with_VirusTotal/workflow.spec.yaml
@@ -1,9 +1,9 @@
 extension: workflow
 products: ["insightconnect"]
 name: Slack_Chatbot_URL_Analysis_with_VirusTotal
-title: "Slack Chatbot URL Analysis with VirusTotal"
+title: "Slack Chatbot URL Enrichment with VirusTotal"
 description: Initiate and receive VirusTotal URL scan reports with the Slack chatbot.
-version: 1.0.2
+version: 1.0.3
 vendor: rapid7
 support: rapid7
 status: []
