--- a/workflows/Disable_User_in_Microsoft_Active_Directory_with_Microsoft_Teams/workflow.spec.yaml
+++ b/workflows/Disable_User_in_Microsoft_Active_Directory_with_Microsoft_Teams/workflow.spec.yaml
@@ -2,7 +2,7 @@ extension: workflow
 products: ["insightconnect"]
 name: Disable_User_in_Microsoft_Active_Directory_with_Microsoft_Teams
 title: "Disable User in Microsoft Active Directory with Microsoft Teams"
-description: Suspend Active Directory LDAP users from Slack.
+description: Disable Active Directory LDAP users from Slack.
 version: 1.0.0
 vendor: rapid7
 support: rapid7
